--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            kaspar030/git-cache
+            ghcr.io/kaspar030/git-cache
           # generate Docker tags based on the following events/attributes
           tags: |
             type=ref,event=branch
@@ -73,10 +73,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
