--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 anyhow = "1.0.79"
 camino = { version = "1.1.6", features = ["serde"] }
 clap = { version = "4.4.18", features = ["cargo", "env", "string"] }
+fd-lock = "4.0.2"
 shellexpand = "3.1.0"
 url = "2.5.0"
 
