--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 anyhow = "1.0.86"
 camino = { version = "1.1.7", features = ["serde"] }
 clap = { version = "4.5.7", features = ["cargo", "env", "string"] }
+derive_builder = "0.20.0"
 fd-lock = "4.0.2"
 shellexpand = "3.1.0"
 url = "2.5.2"
