--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "git-cache"
-version = "0.1.5"
+version = "0.2.0-alpha"
 edition = "2021"
 authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
 
