--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ camino = { version = "1.1.9", features = ["serde"] }
 clap = { version = "4.5.27", features = ["cargo", "env", "string"] }
 derive_builder = "0.20.2"
 fd-lock = "4.0.2"
+gix-config = "0.43.0"
 shellexpand = "3.1.0"
 url = "2.5.4"
 
