feat: parallelize submodule checkout

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4.5.27", features = ["cargo", "env", "string"] }
 derive_builder = "0.20.2"
 fd-lock = "4.0.2"
 gix-config = "0.43.0"
+rayon = "1.10.0"
 shellexpand = "3.1.0"
 url = "2.5.4"
 
