ci: enable sccache and rust cache

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      SCCACHE_GHA_ENABLED: "true"
+      RUSTC_WRAPPER: "sccache"
+
     steps:
+    - name: Run sccache-cache
+      uses: mozilla-actions/sccache-action@v0.0.3
+    - name: rust cache
+      uses: Swatinem/rust-cache@v2
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
