--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 anyhow = "1.0.98"
 camino = { version = "1.1.9", features = ["serde"] }
 clap = { version = "4.5.39", features = ["cargo", "env", "string"] }
+crossbeam = "0.8.4"
 derive_builder = "0.20.2"
 fd-lock = "4.0.4"
 gix-config = "0.45.1"
