--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -26,7 +26,9 @@ jobs:
           - os: debian
             codename: bullseye
           - os: debian
-            codename: buster
+            codename: bookworm
+          - os: debian
+            codename: trixie
 
     steps:
       - name: fixup variables
