--- a/ci/docker/Dockerfile
+++ b/ci/docker/Dockerfile
@@ -7,7 +7,7 @@
 #    `COPY --from=kaspar030/git-cache:<version>-<codename>` /git-cache /usr/bin
 #
 # `version`: every semver combination should work (0, 0.1, 0.1.17, ...)
-# `codename` is either one of "buster" and "bullseye", or one of "focal" and "jammy",
+# `codename` is either one of "bullseye", "bookworm" or "trixie", or one of "focal", "jammy", or "noble"
 # or "debian-latest", or "ubuntu-latest".
 #
 ARG DEBIAN_FROM=ubuntu:latest
@@ -25,7 +25,7 @@ RUN if test -z "$(command -v cargo)"; then apt-get update && apt-get -y install 
 RUN if test -z "$(command -v cargo)"; then curl https://sh.rustup.rs -sSf | sh -s -- -y ; fi
 
 # rust:buster ships 1.79, bump that
-RUN if test "${DEBIAN_FROM}" = "rust:buster"; then rustup default 1.82 ; fi
+#RUN if test "${DEBIAN_FROM}" = "rust:buster"; then rustup default 1.82 ; fi
 
 # this works on both debian and ubuntu
 ENV PATH="/root/.cargo/bin:${PATH}"
