--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 
 [dependencies]
 anyhow = "1.0.101"
-camino = { version = "1.1.12", features = ["serde"] }
+camino = { version = "1.2.2", features = ["serde1"] }
 clap = { version = "4.5.58", features = ["cargo", "env", "string"] }
 crossbeam = "0.8.4"
 derive_builder = "0.20.2"
